--- a/janitor/janitor in rmd.Rmd
+++ b/janitor/janitor in rmd.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "janitor in rmd"
 author: "greg dubrow"
-date: "6/8/2019"
+date: '`r format(Sys.Date(), "%B %d, %Y")`'
 output: html_document
 ---
 
@@ -10,7 +10,18 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 
-```{r janitor}
+```{r pkg load, include = FALSE, ECHO = FALSE}
+
+library(janitor)
+library(tidyverse)
+library(readxl)
+library(knitr)
+```
+
+
+```{r tabyl output, ECHO = FALSE}
+
+# use knitr::kable to render nicer looking table in html
 mtcars %>%
   tabyl(gear, cyl) %>%
   adorn_totals("row") %>% # creates row of sum of cols
@@ -21,8 +32,8 @@ mtcars %>%
          #can only be one or the other, row or col, last one in chain will output
   adorn_pct_formatting(digits = 1) %>% 
   adorn_ns() %>% # if NA is set, will add them to output
-  adorn_title("top", row_name = "Gears", col_name = "Cylindars") # adds field titles if output
-
+  adorn_title("top", row_name = "Gears", col_name = "Cylindars") %>% # adds field titles if output
+  kable()
 ```
 
 ## Including Plots
