--- a/janitor/janitor in rmd.Rmd
+++ b/janitor/janitor in rmd.Rmd
@@ -36,12 +36,11 @@ mtcars %>%
   kable()
 ```
 
+
+```{r pressure, include = FALSE, echo=FALSE}
 ## Including Plots
+#You can also embed plots, for example:
+#plot(pressure)
 
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
+#Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that #generated the plot.
 ```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
